[package]
name = "bot"
version = "0.1.0"
authors = ["Edward Zelis <zeledvards@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.29"
tracing-subscriber = "0.3.2"
tracing-futures = "0.2.5"
openweathermap = "0.2.4"
futures = { version = "0.3.17", features = ["executor", "thread-pool"] }
serenity = "0.10.9"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
yaml-rust = "0.4.5"

[dependencies.songbird]
version = "0.2.0"
features = ["builtin-queue"]
